[package]
name = "identi"
version = "0.1.0"
edition = "2021"

[dependencies]
dioxus = { version = "0.7.9", features = ["router"] }

# Serialization
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"

# WASM / JS interop
wasm-bindgen         = "0.2"
wasm-bindgen-futures = "0.4"
js-sys               = "0.3"

# Logging to browser console
log         = "0.4"
console_log = "1"
chrono = { version = "0.4.45", features = ["clock", "serde"] }
uuid = { version = "1.23.4", features = ["v4", "serde", "js"] }
lazy_static = "1.5.0"
gloo-timers = { version = "0.4.0", features = ["futures"] }
pulldown-cmark = "0.13.4"
ammonia = "4.1.3"
futures = "0.3.32"
once_cell = "1.21.4"
indexmap = { version = "2.14.0", features = ["serde"] }
palette = { version = "0.7.6", default-features = false, features = ["serde", "serializing"] }
dioxus-primitives = { git = "https://github.com/DioxusLabs/components", version = "0.0.1", default-features = false }

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[dependencies.web-sys]
version  = "0.3"
features = [
  "Window",
  "IdbFactory",
  "IdbOpenDbRequest",
  "IdbVersionChangeEvent",
  "IdbDatabase",
  "IdbTransaction",
  "IdbTransactionMode",
  "IdbObjectStore",
  "IdbRequest",
  "DomException",
  "DomStringList",
  "Event",
  "Blob",
  "BlobPropertyBag",
  "Url",
  "Request",
  "RequestInit",
  "RequestMode",
  "Response",
  "HtmlAnchorElement",
  "Document",
  "Navigator",
  "StorageManager",
]

[profile.dev]
opt-level = 0
debug = 1
incremental = true
codegen-units = 256
